Atualização - CSS: Logo e Menu.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
-body {
+:root{
+    --color-primary: #917758;
+}
+
+* { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
     font-family: 'Poppins', sans-serif;
 }
 
@@ -9,6 +16,16 @@ body {
     background-size: cover;
     background-image: url(../images/bg-home.jpg);
     height: 100vh; /* viewport height */
+
+}
+
+.home .header {
+    padding-top: 30px;
+}
+
+.home .header .nav {
+    display: flex;
+    justify-content: center;
 }
 
 .home .header .nav ul {
@@ -19,8 +36,23 @@ body {
 .home .header .nav ul li {
     display: flex;
     align-items: center;
+    margin: 0 10px;
 }
 
 .home .header .nav ul li a {
-    
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 12px;
+    padding: 20px;
+}
+
+.home .header .nav ul li a:hover {
+    border-bottom: 2px solid var(--color-primary);
+    color: var(--color-primary);
+}
+
+.home .header .nav ul li .logo {
+    margin: 0 30px;
 }
