--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 :root{
     --color-primary: #917758;
+    --color-secundary: #3c2915;
+    --color-primary-light: #f5eee6;
+
 }
 
 * { 
@@ -12,10 +15,21 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.container{
+    width: 1170px;
+    margin: 0 auto;
+}
+
+
+/******************************************************
+*                        HOME
+******************************************************/
+
 .home {
     background-size: cover;
     background-image: url(../images/bg-home.jpg);
     height: 100vh; /* viewport height */
+    position: relative;
 
 }
 
@@ -35,8 +49,9 @@ body {
 
 .home .header .nav ul li {
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin: 0 10px;
+    width: 150px;
 }
 
 .home .header .nav ul li a {
@@ -55,4 +70,188 @@ body {
 
 .home .header .nav ul li .logo {
     margin: 0 30px;
+}
+
+
+
+/******************************************************
+*                   HOME - BANNER
+******************************************************/
+
+.home .banner {
+    color: white;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 280px;
+    width: 830px;
+    margin-left: -415px;
+    margin-top: -80px;
+}
+
+.home .banner span {
+    display: block;
+}
+
+.home .banner .slogan1 {
+    color: var(--color-primary);
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 14px;
+}
+
+.home .banner h1 {
+    text-transform: uppercase;
+    font-size: 120px;
+}
+
+.home .banner .slogan2 {
+    margin-bottom: 30px;   
+}
+
+
+/******************************************************
+*                        ABOUT 
+******************************************************/
+
+.about {
+    
+    background-color: var(--color-primary);
+}
+
+.about .container {
+    display: flex;
+}
+
+.about .timing {
+    position: relative;
+    top: -50px;
+    width: 33%;
+    padding: 20px;
+    background-image: url(../images/brush-big.jpg);
+}
+
+.about .timing .overlay {
+    background: rgba(0, 0, 0, 0.8);
+    text-align: center;
+    padding: 40px 20px;
+}
+
+.about .timing .icon-cut{
+    width: 50px;
+}
+
+.about .timing h3{
+    color: var(--color-primary);
+    text-transform: uppercase;
+    border-bottom: 1px solid var(--color-primary);
+    width: fit-content;
+    margin: 0 auto 30px auto;
+    font-size: 30px;
+}
+
+.about .timing .text {
+    margin: 10px 0;
+}
+
+.about .timing .text:after{
+    content: '•';
+    color: white;
+    display: block;
+    font-size: 25px;
+    margin-top: 10px;
+}
+
+.about .timing .text:last-of-type:after{
+    content:'|';
+}
+
+.about .timing .text h4{
+    color: grey;
+    font-weight: 400;
+    font-size: 14px;
+
+}
+
+.about .timing span{
+    color: white;
+    font-size: 14px;
+    display: block;
+}
+
+.about .experience {
+    width: 66%;
+    color: white;
+    margin-left:  7%;
+    margin-top: 100px;
+}
+
+.about .experience h2{
+    font-weight: 400;
+    font-size: 40px;
+}
+
+.about .experience h2::after{
+    display: block;
+    content: '';
+    width: 100px;
+    height: 3px;
+    background-color: #a38f78;
+    margin: 20px;
+}
+
+.about .experience .text{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.about .experience .text p {
+
+    margin-bottom: 20px;
+    font-weight: 100;
+    font-size: 17px;
+    text-align: justify;
+}
+
+
+/******************************************************
+*                   SERVICES 
+******************************************************/
+
+.services {
+    padding: 100px 0;
+    text-align: center;
+    background-color: var(--color-primary-light);
+}
+
+.services h2 {
+    color: var(--color-secundary);
+    font-weight: 400;
+    font-size: 50px;
+}
+
+.services .boxes{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.services .box{
+    border: 3px solid var(--color-primary);
+    padding: 50px 40px;
+    margin: 30px;
+}
+
+.services .box h4{
+    color: var(--color-secundary);
+    margin-top: 30px;
+}
+
+.services .box p{
+    margin-top: 20px;
+    font-size: 14px;
+    line-height: 30px;
+
 }
